# columnstore

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: aggregate_bench.cpp  bench_common.h  filter_bench.cpp  padding_bench.cpp  regress.py  scan_bench.cpp
bench/data/: generate.cpp
bench/results/: bench_local.json  ci_baseline.jsonl  local_100m.jsonl  local_10m.jsonl  local_1m.jsonl  padding_local.jsonl
docs/: avx2-operators.md  execution-model.md  rle-encoding.md  scalar-fallback.md
src/: main.cpp
src/core/: batch.cpp  batch.h  column.cpp  column.h  dict.cpp  dict.h  schema.cpp  schema.h  types.h
src/exec/: aggregate.cpp  aggregate.h  count_distinct.cpp  count_distinct.h  filter.cpp  filter.h  operator.h  pipeline.cpp  pipeline.h  sink.cpp  sink.h  source.cpp  source.h
src/io/: csv.cpp  csv.h
src/obs/: histogram.cpp  histogram.h
src/rle/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
src/simd/: cpu_detect.cpp  cpu_detect.h  filter_dict_eq_avx2.cpp  filter_int32_avx2.cpp  filter_int32_scalar.cpp  kernels.h  sum_int32_avx2.cpp  sum_int32_scalar.cpp
src/sql/: sql.cpp  sql.h
tests/fuzz/: filter_fuzz.cpp  rle_fuzz.cpp
tests/integration/: query_test.cpp
tests/unit/: aggregate_test.cpp  column_test.cpp  dict_test.cpp  filter_test.cpp  pipeline_test.cpp  property_test.cpp  rle_test.cpp  sql_test.cpp
